Fixed line-wrap breakpoint in cart line item display and added billingSlice.ts

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,15 @@ h6 {
   margin-block-end: 1em;
 }
 
+p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+.cart-item {
+  margin-bottom: 1em;
+}
+
 .content {
   padding-left: 5em;
   padding-right: 5em;
@@ -25,8 +34,17 @@ h6 {
   justify-content: end;
 }
 
+.flex-h-start {
+  display: flex;
+  justify-content: start;
+}
+
 .full-width {
   width: 100%;
+}
+
+.margin-top-2em {
+  margin-top: 2em;
 }
 
 .rmd-card {
